--- a/CMIP6_simulations.ipynb
+++ b/CMIP6_simulations.ipynb
@@ -5,7 +5,8 @@
    "id": "4e0815b9-0798-4e2b-b23a-c02a0de7843d",
    "metadata": {},
    "source": [
-    "# Glacier runoff model for La Paz, Bolivia"
+    "# Glacier runoff model for La Paz, Bolivia\n",
+    "8/12/24 | ZG"
    ]
   },
   {
